🦟 FIX: z-index issue with circles and progress line

--- a/02-Progress Steps/style.css
+++ b/02-Progress Steps/style.css
@@ -13,10 +13,10 @@ body {
 .container {
 	display: flex;
 	flex-direction: column;
-	width: 30em;
 	padding: 2em;
 	border-radius: 1em;
 	background-color: white;
+	width: 30em;
 }
 
 .progress-container {
@@ -24,25 +24,23 @@ body {
 }
 
 .progress-container::before {
+	content: "";
+	background-color: hsla(270, 50%, 40%, 0.05);
 	position: absolute;
 	top: 50%;
 	left: 0;
-	z-index: -1;
-	width: 100%;
-	height: 0.5em;
-	background-color: hsla(270, 50%, 40%, 0.1);
 	transform: translateY(-50%);
-	content: "";
+	height: 0.5em;
+	width: 100%;
 }
 
 .progress {
+	background-color: rebeccapurple;
 	position: absolute;
 	top: 50%;
-	z-index: -1;
-	width: 0%;
-	height: 0.5em;
-	background-color: rebeccapurple;
 	transform: translateY(-50%);
+	height: 0.5em;
+	width: 0;
 	transition: 0.5s ease;
 }
 
@@ -56,10 +54,11 @@ body {
 	padding: 0.5rem 0.75rem;
 	border: 1px solid rebeccapurple;
 	border-radius: 50%;
-	background-color: hsla(270, 50%, 40%, 0.1);
+	background-color: hsla(270, 50%, 40%, 0.25);
 	font-weight: 700;
 	text-decoration: none;
 	color: rebeccapurple;
+	z-index: 10;
 }
 
 .circle.active {
@@ -68,9 +67,9 @@ body {
 }
 
 .button-container {
+	margin-top: 1em;
 	display: flex;
 	justify-content: space-between;
-	margin-top: 1em;
 }
 
 button {
@@ -78,7 +77,7 @@ button {
 	padding: 0.5em;
 	border: 1px solid rebeccapurple;
 	border-radius: 0.25em;
-	background-color: hsla(270, 50%, 40%, 0.1);
+	background-color: hsla(270, 50%, 40%, 0.25);
 	font-weight: bolder;
 	text-transform: uppercase;
 	color: rebeccapurple;
@@ -86,7 +85,7 @@ button {
 }
 
 button:disabled {
-	border: solid 1px hsla(270, 50%, 40%, 0.25);
 	color: hsla(270, 50%, 40%, 0.25);
+	border: solid 1px hsla(270, 50%, 40%, 0.25);
 	cursor: not-allowed;
 }
